<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_main"
    android:background="@color/surface">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_app_bar_layout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragment_exercises_top_app_bar"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/main_top_app_bar" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_main_train_element"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fragment_main_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_app_bar_layout">

        <TextView
            android:id="@+id/fragment_main_train_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/fragment_main_train_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/fragment_main_train_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:text="@string/fragment_main_train_description"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_main_workouts_elements"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fragment_main_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_main_train_element">

        <TextView
            android:id="@+id/fragment_main_workouts_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/fragment_main_workouts_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/fragment_main_workouts_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:text="@string/fragment_main_workouts_description"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_main_exercises_element"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fragment_main_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_main_workouts_elements">

        <TextView
            android:id="@+id/fragment_main_exercises_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/fragment_main_exercises_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/fragment_main_exercises_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:text="@string/fragment_main_exercises_description"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_main_history_element"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fragment_main_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fragment_main_exercises_element">

        <TextView
            android:id="@+id/fragment_main_history_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/fragment_main_history_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/fragment_main_history_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:text="@string/fragment_main_history_description"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

    </FrameLayout>



</RelativeLayout>