<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/surface"
    android:transitionName="fragment_main_settings">

    <RelativeLayout
        android:id="@+id/fragment_settings_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/fragment_settings_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_arrow"
            android:layout_marginTop="1dp"/>

        <TextView
            android:id="@+id/fragment_settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fragment_settings_back_arrow"
            android:text="@string/fragment_main_settings_text"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_settings_clear_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/fragment_settings_app_bar"
        android:background="@drawable/list_element">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_clear_history"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:padding="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_settings_clear_completed_goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/fragment_settings_clear_history"
        android:background="@drawable/list_element">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_clear_completed_goals"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:padding="10dp"/>

    </RelativeLayout>

</RelativeLayout>