<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface">

    <RelativeLayout
        android:id="@+id/fragment_week_review_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/fragment_week_review_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_arrow"
            android:layout_marginTop="1dp"/>

        <TextView
            android:id="@+id/fragment_week_review_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fragment_week_review_back_arrow"
            android:text="@string/fragment_week_review_text"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_element"
        android:layout_below="@id/fragment_week_review_bar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/fragment_week_review_date_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#5B87DE"
            android:text="27 Oct - 2 Nov"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/fragment_week_review_line_below_date_range"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line"
            android:layout_below="@id/fragment_week_review_date_range"/>

        <LinearLayout
            android:id="@+id/fragment_week_review_numbers_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_below="@id/fragment_week_review_line_below_date_range">

            <RelativeLayout
                android:id="@+id/fragment_week_review_repetition_number_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/fragment_week_review_repetition_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="275"
                    android:layout_centerHorizontal="true"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_week_review_repetitions_text"
                    android:textSize="20sp"
                    android:textColor="#90A4AE"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fragment_week_review_repetition_number"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragment_week_review_time_number_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/fragment_week_review_time_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1h 9 min"
                    android:layout_centerHorizontal="true"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_week_review_trained_text"
                    android:textSize="20sp"
                    android:textColor="#90A4AE"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fragment_week_review_time_number"/>

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/fragment_week_review_line_below_numbers_area"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line"
            android:layout_below="@id/fragment_week_review_numbers_area"/>

        <TextView
            android:id="@+id/fragment_week_review_workouts_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="25sp"
            android:text="@string/fragment_main_workouts_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@id/fragment_week_review_line_below_numbers_area"/>

        <TextView
            android:id="@+id/fragment_week_review_workouts_content"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="Cardio - 16 min / 80 rep\n Chest workout - 23 min / 60 rep\nCardio - 18 min / 80 rep\nAbs workout - 12 min / 55 rep"
            android:textAlignment="center"
            android:layout_below="@id/fragment_week_review_workouts_text"/>

        <ImageView
            android:id="@+id/fragment_week_review_line_below_workouts_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_line"
            android:layout_below="@id/fragment_week_review_workouts_content"/>

        <TextView
            android:id="@+id/fragment_week_review_completed_goals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:textSize="25sp"
            android:text="@string/fragment_week_review_completed_goals_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@id/fragment_week_review_line_below_workouts_content"/>

        <TextView
            android:id="@+id/fragment_week_review_completed_goals_content"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:text="300 minutes of training"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:layout_below="@id/fragment_week_review_completed_goals_text"/>

    </RelativeLayout>

</RelativeLayout>